# BlackRose

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  ProceduralMap.h  README.md
BlackRose/: CMakeLists.txt
Libreries/Qt/Docs/Qt-5.9.5/: Makefile  qdoc.qch  qmake.qch  qtdoc.qch  qtnfc.qch  qtqml.qch  qtsql.qch  qtsvg.qch
Libreries/Qt/Docs/Qt-5.9.5/activeqt/: activeqt-activeqt-comapp-comapp-pro.html  activeqt-activeqt-comapp-example.html  activeqt-activeqt-comapp-main-cpp.html  activeqt-activeqt-hierarchy-example.html  activeqt-activeqt-hierarchy-hierarchy-pro.html  activeqt-activeqt-hierarchy-main-cpp.html  activeqt-activeqt-hierarchy-objects-cpp.html  activeqt-activeqt-hierarchy-objects-h.html  activeqt-activeqt-menus-example.html  activeqt-activeqt-menus-main-cpp.html  activeqt-activeqt-menus-menus-cpp.html  activeqt-activeqt-menus-menus-h.html  activeqt-activeqt-menus-menus-pro.html  activeqt-activeqt-multiple-ax1-h.html  activeqt-activeqt-multiple-ax2-h.html  activeqt-activeqt-multiple-example.html  activeqt-activeqt-multiple-main-cpp.html  activeqt-activeqt-multiple-multiple-pro.html  activeqt-activeqt-opengl-example.html  activeqt-activeqt-opengl-glbox-cpp.html  activeqt-activeqt-opengl-glbox-h.html  activeqt-activeqt-opengl-globjwin-cpp.html  activeqt-activeqt-opengl-globjwin-h.html  activeqt-activeqt-opengl-main-cpp.html  activeqt-activeqt-opengl-opengl-pro.html  activeqt-activeqt-qutlook-addressview-cpp.html  activeqt-activeqt-qutlook-addressview-h.html  activeqt-activeqt-qutlook-example.html  activeqt-activeqt-qutlook-main-cpp.html  activeqt-activeqt-qutlook-qutlook-pro.html  activeqt-activeqt-simple-example.html  activeqt-activeqt-simple-main-cpp.html  activeqt-activeqt-simple-simple-pro.html  activeqt-activeqt-webbrowser-example.html  activeqt-activeqt-webbrowser-main-cpp.html  activeqt-activeqt-webbrowser-mainwindow-ui.html  activeqt-activeqt-webbrowser-webaxwidget-h.html  activeqt-activeqt-webbrowser-webbrowser-pro.html  activeqt-activeqt-wrapper-example.html  activeqt-activeqt-wrapper-main-cpp.html  (+39 more)
Libreries/Qt/Docs/Qt-5.9.5/qdoc/: 01-qdoc-manual.html  03-qdoc-commands-markup.html  04-qdoc-commands-textmarkup.html  05-qdoc-commands-documentstructure.html  06-qdoc-commands-includecodeinline.html  07-0-qdoc-commands-includingexternalcode.html  08-qdoc-commands-creatinglinks.html  09-qdoc-commands-includingimages.html  10-qdoc-commands-tablesandlists.html  11-qdoc-commands-specialcontent.html  12-0-qdoc-commands-miscellaneous.html  13-qdoc-commands-topics.html  14-qdoc-commands-contextcommands.html  15-qdoc-commands-navigation.html  16-qdoc-commands-status.html  17-qdoc-commands-thread.html  18-qdoc-commands-relating.html  19-qdoc-commands-grouping.html  20-qdoc-commands-namingthings.html  21-0-qdoc-configuration.html  21-0-qdoc-creating-dita-maps.html  21-1-minimum-qdocconf.html  21-2-qtgui-qdocconf.html  21-3-qt-dita-xml-output.html  22-creating-help-project-files.html  22-qdoc-configuration-generalvariables.html  23-qdoc-configuration-cppvariables.html  24-qdoc-configuration-htmlvariables.html  25-qdoc-configuration-derivedprojects.html  26-qdoc-configuration-example-manifest-files.html  27-qdoc-commands-alphabetical.html  28-qdoc-qa-pages.html  corefeatures.html  qdoc-categories.html  qdoc-componentset-componentset-pro.html  qdoc-componentset-example.html  qdoc-componentset-progressbar-qml.html  qdoc-componentset-switch-qml.html  qdoc-componentset-tabwidget-qml.html  qdoc-componentset-uicomponents-qdoc-sample.html  (+17 more)
Libreries/Qt/Docs/Qt-5.9.5/qmake/: qmake-advanced-usage.html  qmake-common-projects.html  qmake-environment-reference.html  qmake-function-reference.html  qmake-language.html  qmake-manual.html  qmake-overview.html  qmake-platform-notes.html  qmake-precompiledheaders.html  qmake-project-files.html  qmake-reference.html  qmake-running.html  qmake-test-function-reference.html  qmake-tutorial.html  qmake-variable-reference.html  qmake.index
Libreries/Qt/Docs/Qt-5.9.5/qt3d/: examples-manifest.xml  qml-computecommand-members.html  qml-computecommand.html  (+940 more)
SFMLTest3/: CMakeLists.txt  Game.cpp  Game.h
include/: Character.h  Enemy.h  Entity.h  Game.h  Inventory.h  Menu.h  Observer.h  PlayerCharacter.h  ProceduralMap.h  Projectile.h  Random.h  ResourceHolder.h  ResourceHolder.hpp  ResourceHolder.inl  ResourceIdentifier.h  Robot.h  SceneNode.h  Shield.h  SpriteNode.h  Subject.h  TextureDisplay.h  Wall.h  Weapon.h  World.h  textDisplay.h
include/Achievements/: Achievement.h  AchievementFactory.h  DemolisherAchievement.h  SniperAchievement.h
include/Characters/: Achievement.h  Character.h  CharacterFactory.cpp  CharacterFactory.h  Enemy.h  EnemyFactory.h  Observer.h  PlayerCharacter.h  RobotFighter.h  RobotShooter.h  Subject.h
include/Objects/: ConsumableObject.h  Healpack.h  MeleeWeapon.h  Object.h  ObjectFactory.cpp  ObjectFactory.h  RangedWeapon.h  Shield.h  Tile.h  Weapon.h
include/management/: PatrolStrategy.h  ResourceHolder.h  ResourceIdentifier.h  SeekStrategy.h  Strategy.h
source/: Character.cpp  Enemy.cpp  Entity.cpp  Game.cpp  Game.h  Inventory.cpp  Menu.cpp  Observer.cpp  PlayerCharacter.cpp  ProceduralMap.cpp  Projectile.cpp  Random.cpp  Robot.cpp  SceneNode.cpp  Shield.cpp  SpriteNode.cpp  Subject.cpp  TextureDisplay.cpp  Tile.cpp  Wall.cpp  Weapon.cpp  World.cpp  main.cpp  textDisplay.cpp
source/Achievements/: Achievement.cpp  AchievementFactory.cpp  DemolisherAchievement.cpp  SniperAchievement.cpp
source/Characters/: Achievement.cpp  Character.cpp  CharacterFactory.cpp  Enemy.cpp  EnemyFactory.cpp  Observer.cpp  PlayerCharacter.cpp  RobotFighter.cpp  RobotShooter.cpp  Subject.cpp
source/Objects/: ConsumableObject.cpp  Healpack.cpp  MeleeWeapon.cpp  Object.cpp  ObjectFactory.cpp  RangedWeapon.cpp  Shield.cpp  Tile.cpp  Weapon.cpp
source/management/: PatrolStrategy.cpp  SeekStrategy.cpp  Strategy.cpp
test/: CMakeLists.txt  RunAllTests.cpp  TestEnemyFactory.cpp  TestHealPack.cpp  TestObjectFactory.cpp  TestPlayerCharacter.h  TestRangedWeapon.cpp  TestRobot.cpp  TestTile.cpp  TestWorld.cpp
test/lib/: README.md
(+4735 files in other folders)
